# SOS-Rescue-Ecosystem

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  PROJECT_TRACKER.md  README.md  docker-compose.yml
beacon_app/: README.md  pubspec.yaml
beacon_app/android/app/: build.gradle.kts
beacon_app/android/app/src/main/kotlin/com/example/beacon_app/: MainActivity.kt
beacon_app/ios/Runner/: Info.plist
beacon_app/ios/Runner.xcodeproj/: project.pbxproj
beacon_app/linux/: CMakeLists.txt
beacon_app/linux/runner/: my_application.cc
beacon_app/macos/Runner.xcodeproj/: project.pbxproj
beacon_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
beacon_app/macos/Runner/Configs/: AppInfo.xcconfig
beacon_app/web/: index.html
beacon_app/windows/runner/: Runner.rc
beacon_core/: Cargo.toml
beacon_server/: Cargo.toml
beacon_server/src/: config.rs  errors.rs  main.rs
beacon_server/src/handlers/: auth.rs  health.rs
beacon_server/src/routes/: mod.rs
beacon_shared/: Cargo.toml
beacon_shared/src/models/: emergency_contact.rs  mod.rs  sos_event.rs  user.rs
migrations/: 20260617000000_init.sql
