[workspace]
members = [
    "beacon_shared",
    "beacon_server",
    "beacon_core"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phùng Thế Vinh"]
description = "SOS Rescue Ecosystem (Beacon)"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp"] }
jsonwebtoken = "9.3"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
flutter_rust_bridge = "2.0.0-dev.32"
