[package]
name = "beacon_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
# Nền tảng Core
tokio = { version = "1.37", features = ["full"] }
dotenvy = "0.15"

# Web Framework
axum = "0.7"
serde = "1.0.228"
serde_json = "1.0.150"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid"] }

# Logging (Rất quan trọng)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Share Model từ crate chung
beacon_shared = { path = "../beacon_shared" }

